# obsidian-mcp

./: CHANGELOG.md  README.md  RELEASE_NOTES_1.1.3.md  RELEASE_NOTES_1.1.5.md  RELEASE_NOTES_2.0.0.md  SEARCH_FIX_SUMMARY.md  claude_desktop_config_example.json  pyproject.toml  requirements.txt  test_images.sh  test_prompts.txt  test_search_fix.py
docs/: Obsidian Metadata Management.md  Obsidian_Bases.md
obsidian_mcp/: __init__.py  configure.py  constants.py  server.py
obsidian_mcp/docs/: TOOL_PATTERNS.md
obsidian_mcp/tools/: __init__.py  find_orphaned_notes.py  image_management.py  link_management.py  note_management.py  organization.py  search_discovery.py  view_note_images.py
obsidian_mcp/utils/: __init__.py  filesystem.py  persistent_index.py  validation.py
tests/: run_tests.py  test_all.py  test_auto_search.py  test_edit_note_section.py  test_filesystem_integration.py  test_image_debug.py  test_image_handling.py  test_mcp_search_response.py  test_move_note_enhanced.py  test_performance.py  test_persistent_index.py  test_persistent_index_properties.py  test_property_search.py  test_property_search_simple.py  test_regex_json_search.py  test_regex_optimization.py  test_rename_note.py  test_search_metadata.py  test_search_performance.py  test_sqlite_error_handling.py  test_vault_location.py  test_working_images.py
