[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-mcp"
version = "2.0.0"
description = "MCP server for interacting with Obsidian vaults through direct filesystem access"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Nate Strong", email = "nathanstrong.fx@gmail.com"}
]
keywords = ["mcp", "obsidian", "fastmcp", "llm", "ai", "notes", "knowledge-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.8.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "pyyaml>=6.0.0",
    "pillow>=10.0.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/natestrong/obsidian-mcp"
Repository = "https://github.com/natestrong/obsidian-mcp"
Issues = "https://github.com/natestrong/obsidian-mcp/issues"

[project.scripts]
obsidian-mcp = "obsidian_mcp.server:main"
obsidian-mcp-configure = "obsidian_mcp.configure:main"

[tool.setuptools]
packages = ["obsidian_mcp", "obsidian_mcp.tools", "obsidian_mcp.utils", "obsidian_mcp.models"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["py.typed"]